[metadata]
name = functional-base-charm
version = 0.0.1
author = Charmed Kubeflow
description = A functional-style Base Charm for Juju charms
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    charmed-kubeflow-chisme
    jinja2
    lightkube > 0.10.0
    ops > 1.2.0

[options.extras_require]
test =
    pytest
    black

[options.packages.find]
where = src
